feat(CBS-256567:LN-58343): restructure persistence layer with improved architecture
- Reorganize embeddable classes into centralized package structure
- Add new repository adapters for loan facility, type, and installment schedule
- Implement specialized entity mappers for different domain aggregates
- Enhance value object mapping with proper JPA converters
- Improve package organization following hexagonal architecture principles
- Add comprehensive support for trade loan specific persistence requirements