@@ -2,6 +2,7 @@ package ir.dotin.loan.trade.core.application.service.configuration;
 
 import java.util.Map;
 
+import com.google.common.collect.ImmutableMap;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 
 import ir.dotin.platform.commons.core.feature.FeatureConfig;
@@ -10,11 +11,11 @@ import ir.dotin.platform.commons.core.feature.FeatureConfig;
 public record TradeFeatureProperties(Map<String, Boolean> features) {
 
     public TradeFeatureProperties {
-        features = features == null ? createDefaultMappings() : Map.copyOf(features);
+        features = features == null ? createDefaultMappings() : ImmutableMap.copyOf(features);
     }
 
     private static Map<String, Boolean> createDefaultMappings() {
-        return Map.of("test", true);
+        return ImmutableMap.of("test", true);
     }
 
     public FeatureConfig featureConfig() {
